--- a/main.css
+++ b/main.css
@@ -1,15 +1,20 @@
 .projectTitle {
     font-style: italic;
-    font-family: cursive;
+    font-family:'Courier New', Courier, monospace;
     font-size: 40px;
     font-weight: 700;
-    
 }
 
-/* .instructButton {
-
+#instruct-button {
+    position: absolute;
+    top: 5%;
+    right: 20%;
 }
-*/
+
+.choice-buttons {
+    padding: 520px 100px;
+    display: flex;
+}
 
 /* .bottom {
     text-align: center;
